<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/staticClicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staticClicks"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/numOfClicks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numOfClicks"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">

		<Button
		    android:id="@+id/clickButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="5dip"
		    android:layout_marginLeft="5dip"
		    android:layout_marginRight="5dip"
		    android:layout_marginTop="5dip"
		    android:layout_weight="0.50"
		    android:padding="0dp"
		    android:text="@string/clickButton" />

		<Button
		    android:id="@+id/clearButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="5dip"
		    android:layout_marginLeft="5dip"
		    android:layout_marginRight="5dip"
		    android:layout_marginTop="5dip"
		    android:layout_weight="0.50"
		    android:padding="0dp"
		    android:text="@string/clearButton" />
	    
	</LinearLayout>

	<Button
	    android:id="@+id/saveButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="5dip"
	    android:layout_marginLeft="5dip"
	    android:layout_marginRight="5dip"
	    android:layout_marginTop="5dip"
	    android:padding="0dp"
	    android:text="@string/saveButton" />

    <Button
        android:id="@+id/leaderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:padding="0dp"
        android:text="@string/leaderButton" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:padding="0dp"
        android:text="@string/signOutButton" />

</LinearLayout>
